# PainterEngine

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL  LICENSE  PainterEngine API Manual.docx  PainterEngine API Manual.md  PainterEngine API 参阅文档.docx  PainterEngine 快速入门教程.docx  PainterEngine.docx  PainterEngine.h  README(CHINESE).md  README(ENGLISH).md  README.md  README_en.md  SConscript  compile_commands.json  xmake.lua  ~$interEngine API Manual.docx  ~$interEngine 快速入门教程.docx  ~$interEngine.docx
Core/: PX_AES.c  PX_BaseGeo.c  PX_BaseGeo.h  PX_BpNeural.h  PX_Core.h  PX_Font.h  PX_Hashmap.h  PX_List.h  PX_MemoryPool.c  PX_Quadtree.h  PX_Sha256.h  PX_String.h  PX_Surface.c  PX_Surface.h  PX_TRaw.c  PX_Texture.c  PX_Typedef.c  PX_Vector.c  PX_Vector.h  PX_Wave.c  PX_curve25519.c  PX_rbtree.h
Kernel/: PX_2dxCommon.h  PX_Grammar.c  PX_Lexer.c  PX_Lexer.h  PX_Object.c  PX_Object.h  PX_Partical.h  PX_Resource.c  PX_Resource.h  PX_ScriptCore.h  PX_Script_Interpreter.c  PX_Script_Interpreter.h  PX_Sync.c  PX_TransmissionProtocal.c  PX_World.c  PX_World.h
PainterEngine/: Makefile  PainterEngineHelper.c  PainterEngineHelper.h
PainterEngine/Architecture/: PainterEngine_Console.c  PainterEngine_Console.h  PainterEngine_MessageBox.c  PainterEngine_MessageBox.h  PainterEngine_Runtime.c  PainterEngine_Runtime.h
PainterEngine/Core/: Makefile  PX_3D.c  PX_3D.h  PX_ANN.c  PX_ANN.h  PX_Arle.c  PX_Arle.h  PX_BaseGeo.c  PX_BaseGeo.h  PX_Bitmap.c  PX_Bitmap.h  PX_BpNeural.c  PX_Core.h  PX_Effect.c  PX_Font.c  PX_Font.h  PX_Hashmap.c  PX_Hashmap.h  PX_Huffman.c  PX_Huffman.h  PX_List.c  PX_Log.c  PX_Log.h  PX_MathTable.h  PX_Memory.c  PX_Memory.h  PX_MemoryPool.c  PX_MemoryPool.h  PX_Packet.c  PX_Packet.h  PX_ParallelCore.h  PX_Quadtree.c  PX_Quadtree.h  PX_Quicksort.c  PX_Quicksort.h  PX_Sha256.c  PX_Sound.c  PX_Sound.h  PX_String.c  PX_String.h  (+12 more)
PainterEngine/Effect/: MatrixEffect_ui.c  MatrixEffect_ui.h
PainterEngine/Kernel/: Makefile  PX_3D_ObjData.h  PX_Actor.h  PX_Animation.c  PX_Animation.h  (+25 more)
Samples/: Console.c  Draw Text.c  DrawGeometry.c  DrawImage.c  First Application.c  Partical.c  ParticalScript.txt  Script.TXT  StoryScript.c  UI Controller.c
Space Old Driver/: Space Old Driver.sln
architecture/: PainterEngine.h  PainterEngine_Console.c  PainterEngine_Console.h  PainterEngine_Designer.c  PainterEngine_Designer.h  PainterEngine_Executer.c  PainterEngine_Executer.h  PainterEngine_Menu.c  PainterEngine_Menu.h  PainterEngine_MessageBox.c  PainterEngine_MessageBox.h  PainterEngine_Runtime.c  PainterEngine_Runtime.h  PainterEngine_Window.c  PainterEngine_Window.h
cmake/: platform.cmake
core/: CMakeLists.txt  PX_3D.c  PX_3D.h  PX_AES.c  PX_AES.h  PX_ANN.c  PX_ANN.h  PX_Abi.c  PX_Abi.h  PX_Arle.c  PX_Arle.h  PX_Base64.c  PX_Base64.h  PX_BaseGeo.c  PX_BaseGeo.h  PX_Bitmap.c  PX_Bitmap.h  PX_Core.h  PX_Delaunay.c  PX_Delaunay.h  PX_Ed25519.c  PX_Ed25519.h  PX_Effect.c  PX_Effect.h  PX_FSM.c  PX_FSM.h  PX_Font.c  PX_Font.h  PX_GPU.c  PX_GPU.h  PX_Gif.c  PX_Gif.h  PX_Hashmap.c  PX_Hashmap.h  PX_Http.c  PX_Http.h  PX_Huffman.c  PX_Huffman.h  PX_ImageFilter.c  PX_ImageFilter.h  (+100 more)
decoder/: PainterEngine_ImageDecoder.h  PainterEngine_jpeg.c  PainterEngine_jpeg.h  PainterEngine_png.c  PainterEngine_png.h
documents/: PainterEngine the book.en.md  PainterEngine the book.md  PainterEngine_the_book_en.md  PainterEngine_the_book_zh-CN.md
kernel/: .PX_Json.c.swp  .PX_Json.c.un~  PX_2dxCommon.h  PX_3D_ObjData.c  PX_3D_ObjData.h  PX_Animation.c  PX_Animation.h  PX_CDA.c  PX_CDA.h  PX_CDA_ObjectVM.h  PX_CDA_VM.h  PX_CSS_COLOR.h  PX_CanvasVM.c  PX_CanvasVM.h  PX_Compiler.c  PX_Compiler.h  PX_FoxLogo.h  PX_Json.c  PX_Json.c~  PX_Json.h  PX_Kernel.h  PX_Lexer.c  PX_Lexer.h  PX_LiveFramework.c  PX_LiveFramework.h  PX_LiveLayer.h  PX_MODBUS.c  PX_MODBUS.h  PX_MQTT.c  PX_MQTT.h  PX_Machine.c  PX_Machine.h  PX_Modbus.c  PX_Modbus.h  PX_Object.c  PX_Object.h  PX_Object_3D.c  PX_Object_3D.h  PX_Object_Animation.c  PX_Object_Animation.h  (+249 more)
platform/android/: AndroidManifest.xml  CMakeLists.txt  PX_sockethub.c  PainterEngine_platform.h  android_audio.c  android_audio.h  android_display.c  android_display.h  android_file.c  android_file.h  android_main.c  android_tcp.c  android_tcp.h  android_time.c  android_time.h  android_udp.c  build.gradle  px_display.c  px_file.c  px_keyboard.c  px_main.c  px_serialport.c  px_socket.c  px_tcp.c  px_thread.c  px_time.c  px_udp.c  settings.gradle
platform/android/app/: build.gradle
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/assets/: 1.traw  bird.2dx  calc_ui.json  cloud1.traw  cloud2.traw  cloud3.traw  cloud4.traw  fox.2dx  foxrun.psb  ground1.traw  ground2.traw  ground3.traw  ground4.traw  ground5.traw  obstacle1.traw  obstacle3.traw  test.traw  wood.traw  wood2.traw
platform/android/app/src/main/assets/birdbuild/: 2dx-shell.ps1  makefile.txt
platform/android/app/src/main/assets/foxbuild/: 2dx-shell.ps1  fox.sai2  makefile.txt
platform/android/app/src/main/cpp/: CMakeLists.txt
platform/android/app/src/main/cpp/jni/: px_audio.c  px_display.c  px_display.h  px_file.c  px_main.c  px_thread.c
platform/android/app/src/main/java/com/pozhu/painterengine/: PE_NativeActivity.java  PermissionHelper.java
platform/android/app/src/main/res/layout/: activity_main.xml
platform/android/app/src/main/res/values/: strings.xml  themes.xml
platform/android/app/src/main/res/values-night/: themes.xml
platform/android/gradle/wrapper/: gradle-wrapper.properties
platform/fpga_gpu/process_system/: CMakeLists.txt  bunny.h  main.c
platform/fpga_gpu/zynq7020/: CMakeLists.txt
platform/harmony/entry/src/main/cpp/: CMakeLists.txt  GlNative.cpp
platform/harmony/entry/src/main/cpp/jni/: na_display.cpp  na_display.h  na_file.cpp  na_main.cpp  na_serialport.cpp  na_tcp.cpp  na_time.cpp  na_udp.cpp
project/: PainterEngine_Application.c  PainterEngine_Application.h  PainterEngine_Startup.c  PainterEngine_Startup.h
runtime/: PainterEngine_Application.c  PainterEngine_Application.h  PainterEngine_Runtime.c  PainterEngine_Runtime.h
(+768 files in other folders)
